# pflang

./: .gitignore  CMakeLists.txt  README.md  docs.md  main.c  test_function.pf
include/: ast.h  common.h  lexer.h  parser.h  test_framework.h  token.h  utils.h
src/: ast.c  lexer.c  main.c  parser.c  test_framework.c  test_script.pf  token.c  utils.c
tests/: function_syntax_tests.c  lexer_tests.c  parser_tests.c  run_tests.c
